--- a/www/_site.yml
+++ b/www/_site.yml
@@ -11,6 +11,9 @@ navbar:
     - text: "Awards"
       icon: fa-award
       href: awards.html
+    - text: "Events"
+      icon: fa-ticket
+      href: events.html
     - text: "Troubleshooting R Markdown"
       icon: fa-question-circle
       href: https://smithcollege-sds.github.io/sds-public/rmarkdown_problems.html
