--- a/www/_site.yml
+++ b/www/_site.yml
@@ -16,7 +16,7 @@ navbar:
       href: events.html
     - text: "Troubleshooting R Markdown"
       icon: fa-question-circle
-      href: https://smithcollege-sds.github.io/sds-public/rmarkdown_problems.html
+      href: rmarkdown_problems.html
     - text: "Newsletters"
       icon: fa-newspaper
       menu:
