--- a/www/_site.yml
+++ b/www/_site.yml
@@ -17,7 +17,7 @@ navbar:
     - text: "Events"
       icon: fa-ticket
       href: events.html
-    - text: "Troubleshooting R Markdown"
+    - text: "Help"
       icon: fa-question-circle
       href: rmarkdown_problems.html
     - text: "Newsletters"
