moved github icon to right

--- a/www/_site.yml
+++ b/www/_site.yml
@@ -31,6 +31,7 @@ navbar:
           href: sds_newsletter_2017.html
         - text: "2016"
           href: sds_newsletter_2016.html
+  right:
     - icon: fa-github fa-lg
       href: https://github.com/SmithCollege-SDS
 
