--- a/www/_site.yml
+++ b/www/_site.yml
@@ -31,6 +31,22 @@ navbar:
           href: sds_newsletter_2017.html
         - text: "2016"
           href: sds_newsletter_2016.html
+    - text: "Ethics"
+      icon: fa-book
+      menu:
+        - text: "Copywriting music"
+          href: patch_music.html
+        - text: "OkCupid"
+          href: patch_okcupid.html
+        - text: "Coding race"
+          href: patch_race_coding.html
+        - text: "Social networks"
+          href: patch_social_networks.html
+        - text: "StitchFix"
+          href: patch_stitchfix.html
+        - text: "Codes of ethics"
+          href: patch_wmd.html
+          
   right:
     - icon: fa-github fa-lg
       href: https://github.com/SmithCollege-SDS
