--- a/www/_site.yml
+++ b/www/_site.yml
@@ -46,7 +46,9 @@ navbar:
           href: patch_stitchfix.html
         - text: "Codes of ethics"
           href: patch_wmd.html
-          
+    - text: "Calendar"
+      icon: fa-calendar-alt
+      href: calendar.html           
   right:
     - icon: fa-github fa-lg
       href: https://github.com/SmithCollege-SDS
