Renamed calendar .Rmd file

--- a/www/_site.yml
+++ b/www/_site.yml
@@ -48,7 +48,7 @@ navbar:
           href: patch_wmd.html
     - text: "Calendar"
       icon: fa-calendar-alt
-      href: calendar.html           
+      href: JSE_calendar.html           
   right:
     - icon: fa-github fa-lg
       href: https://github.com/SmithCollege-SDS
