--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,5 +22,6 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
 Suggests: 
+    remotes,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
