--- a/www/_quarto.yml
+++ b/www/_quarto.yml
@@ -32,6 +32,8 @@ website:
             href: https://scholarworks.smith.edu/sds/
           - text: "Newsletters"
             icon: fa-newspaper
+          - text: "2022"
+            href: sds_newsletter_2022.qmd
           - text: "2021"
             href: sds_newsletter_2021.html
           - text: "2020"
