--- a/.github/workflows/quarto.yaml
+++ b/.github/workflows/quarto.yaml
@@ -12,27 +12,46 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: r-lib/actions/setup-pandoc@v1
+      - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
     
       - uses: r-lib/actions/setup-r-dependencies@v2
-      
-      - name: extra packages
+        with:
+          upgrade: 'TRUE'
+          packages:
+            any::remotes
+            any::tidyverse
+            any::DT
+            any::emoji
+            any::googlesheets4
+            any::here
+            any::htmltools
+            any::kableExtra
+            any::knitr
+            any::ical
+            any::lubridate
+            any::mosaic
+
+      - name: GitHub packages
         run: |
           Rscript -e 'remotes::install_github("SmithCollege-SDS/sds")'
       
-      - uses: quarto-dev/quarto-actions/install-quarto@v1
-
-      - name: Build site
-        run: quarto render www
-
-      - name: Deploy to GitHub pages 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.4
+      - uses: quarto-dev/quarto-actions/setup@v2
         with:
-          branch: gh-pages
-          folder: docs
+          tinytex: true
+
+#      - name: Install Quarto extensions
+#        run: |        
+#          quarto add quarto-journals/jss
+      
+      - name: Render Quarto Project
+        uses: quarto-dev/quarto-actions/publish@v2
+        with:
+          target: gh-pages
+#          to: pdf
+        env:
+          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
